--- a/Checkpoint.html
+++ b/Checkpoint.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aissatou SIDIBE</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body> 
     <!--balise semantique-->
-
-    <header>
-        <nav> 
+<section class="top-page">
+    <header class="header">
+        <img src="images/IMG_2405.JPG" width="100" height="150" alt="Photo de Aissatou">
+        <nav class="nav"> 
             <a href="">accueil</a>
             <br> 
             <a href="">à propos</a>
@@ -22,8 +24,13 @@
             <a href="">contact</a>
         </nav>
     </header>
+    <div class="landing-page">
+        <h1>welcome to my world</h1>
+    </div>
+</section>
     
- <center><h1>welcome to gomycode</h1>
+    
+ <center>
 </center>
 
 <!--video-->
@@ -64,4 +71,4 @@
 
 </body>
 
-</htm
+</html>
